# backend/docs/swagger.yaml
@@ -2108,6 +2108,19 @@ definitions:
         example: 3450
         type: integer
     type: object
+  internal_proj_marketplace_handler.TranslationResult:
+    properties:
+      attribute_id:
+        example: 123
+        type: integer
+      errors:
+        items:
+          type: string
+        type: array
+      translations:
+        additionalProperties: true
+        type: object
+    type: object
   internal_proj_marketplace_handler.TranslationUpdateRequest:
     properties:
       is_verified:
@@ -4374,6 +4387,59 @@ paths:
       security:
       - BearerAuth: []
       summary: Update attribute
+      tags:
+      - marketplace-admin-attributes
+  /api/v1/admin/marketplace/attributes/{id}/translate:
+    post:
+      consumes:
+      - application/json
+      description: Automatically translates attribute display name and options to
+        all supported languages using Google Translate
+      parameters:
+      - description: Attribute ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Translation settings
+        in: body
+        name: languages
+        schema:
+          properties:
+            source_language:
+              type: string
+            target_languages:
+              items:
+                type: string
+              type: array
+          type: object
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Translation results
+          schema:
+            allOf:
+            - $ref: '#/definitions/backend_pkg_utils.SuccessResponseSwag'
+            - properties:
+                data:
+                  $ref: '#/definitions/internal_proj_marketplace_handler.TranslationResult'
+              type: object
+        "400":
+          description: Invalid attribute ID
+          schema:
+            $ref: '#/definitions/backend_pkg_utils.ErrorResponseSwag'
+        "404":
+          description: Attribute not found
+          schema:
+            $ref: '#/definitions/backend_pkg_utils.ErrorResponseSwag'
+        "500":
+          description: Translation error
+          schema:
+            $ref: '#/definitions/backend_pkg_utils.ErrorResponseSwag'
+      security:
+      - BearerAuth: []
+      summary: Auto-translate attribute
       tags:
       - marketplace-admin-attributes
   /api/v1/admin/marketplace/attributes/bulk:
